--- a/dev.html
+++ b/dev.html
@@ -7,7 +7,8 @@
 <body>
     <div id="playerContainer">
         <lplayer>
-            
+            <iframe src="index.html" height="100%" width="100%" frameborder="0">
+            </iframe>
         </lplayer>
     </div>
     <script src="lplayer.js"></script>
