--- a/index.html
+++ b/index.html
@@ -1,25 +1,11 @@
 <div id="lpl-list">
-    <div class="lpl-list-item">
-        <div class="lpl-list-item-num">2</div>
-        <div class="lpl-list-item-title">Moon Halog</div>
-        <div class="lpl-list-item-artist">Moon Halog</div>
-    </div>
-    <div class="lpl-list-item">
-        <div class="lpl-list-item-num">23</div>
-        <div class="lpl-list-item-title">Legend Apex</div>
-        <div class="lpl-list-item-artist">Moon Halog</div>
-    </div>
-    <div class="lpl-list-item"></div>
-    <div class="lpl-list-item"></div>
-    <div class="lpl-list-item"></div>
-    <div class="lpl-list-item"></div>
-    <div class="lpl-list-item"></div>
 </div>
 <div id="lpl-body">
     <div id="lpl-cover"></div>
-    <div id="lpl-title">START:DASH!!</div>
-    <div id="lpl-artist">μ's</div>
-    <div id="lpl-album">No brand girls / START:DASH!!</div>
+    <div id="lpl-title">Title</div>
+    <div id="lpl-artist">Artist</div>
+    <div id="lpl-album">Album</div>
+    <div id="lpl-duration">0 / 00:00</div>
     <div id="lpl-control">
         <div class="lpl-control-play"></div>
         <div class="lpl-control-previous"></div>
@@ -30,7 +16,7 @@
             <div class="lpl-control-volumeController-progress"></div>
             <div class="lpl-control-volumeController-progressThumb"></div>
         </div>
-        <div class="lpl-control-list"></div>   
+        <div class="lpl-control-list"></div>
     </div>
     <div id="lpl-control-progressBar">
         <div class="lpl-control-progressBar-progress"></div>
