--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <div id="lpl-album">Album</div>
     <div id="lpl-duration">0 / 00:00</div>
     <div id="lpl-control">
-        <div class="lpl-control-play"></div>
-        <div class="lpl-control-previous"></div>
-        <div class="lpl-control-order"></div>
-        <div class="lpl-control-next"></div>
-        <div class="lpl-control-volume"></div>
+        <div class="lpl-control-play lpl-control-button"></div>
+        <div class="lpl-control-previous lpl-control-button"></div>
+        <div class="lpl-control-order lpl-control-button"></div>
+        <div class="lpl-control-next lpl-control-button"></div>
+        <div class="lpl-control-volume lpl-control-button"></div>
         <div id="lpl-control-volumeController">
             <div class="lpl-control-volumeController-progress"></div>
             <div class="lpl-control-volumeController-progressThumb"></div>
         </div>
-        <div class="lpl-control-list"></div>
+        <div class="lpl-control-list lpl-control-button"></div>
     </div>
     <div id="lpl-control-progressBar">
         <div class="lpl-control-progressBar-progress"></div>
