--- a/dev.html
+++ b/dev.html
@@ -11,5 +11,26 @@
             </iframe>
         </lplayer>
     </div>
-    <script src="lplayer.js"></script>
+    <div id="lyricContainer">
+        <llyric>
+        </llyric>
+    </div>
+    <style>
+        #playerContainer{
+            position: absolute;
+            top: 30%;
+            left: 0;
+            width: 60%;
+            height: 30%;
+        }
+        #lyricContainer{
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 40%;
+            left: 0;
+        }
+        
+    </style>
+    <!-- <script src="lplayer.js"></script> -->
 </body>
