--- a/dev.html
+++ b/dev.html
@@ -32,5 +32,5 @@
         }
         
     </style>
-    <!-- <script src="lplayer.js"></script> -->
+    <script src="lplayer.js"></script>
 </body>
