--- a/demo/index.html
+++ b/demo/index.html
@@ -19,4 +19,13 @@
         By making source at the end to load the js file after your page.
     -->
     <script src="../lplayer.js"></script>
+    <style>
+        #playerContainer{
+            position: absolute;
+            bottom: 300px;
+            left: 0;
+            height: 300px;
+            width: 1000px;
+        }
+    </style>
 </body>
