--- a/index.html
+++ b/index.html
@@ -23,4 +23,4 @@
         <div class="lpl-control-progressBar-progressThumb"></div>
     </div>
 </div>
-<link rel="stylesheet" href="https://raw.githubusercontent.com/Bylx666/lplayer/main/lplayer.css">
+<link rel="stylesheet" href="lplayer.css">
