--- a/demo.html
+++ b/demo.html
@@ -25,8 +25,7 @@
         directly insert a source from the js file.
         By making source at the end to load the js file after your page.
     -->
-    <script src="lplayer.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Bylx666/lplayer@main/lplayer.css">
+    <script src="dist/lplayer.min.js"></script>
     <style>
         #playerContainer{
             position: absolute;
