--- a/demo/demo.html
+++ b/demo/demo.html
@@ -25,7 +25,7 @@
         directly insert a source from the js file.
         By making source at the end to load the js file after your page.
     -->
-    <script src="dist/lplayer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Bylx666/lplayer@main/dist/lplayer.min.js"></script>
     <style>
         #playerContainer{
             position: absolute;
