--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <head>
-    <!-- recommend to set a encoder. -->
+    <!-- 
+        recommend to set a encoder.
+        推荐加上编码
+    -->
     <meta charset="UTF-8">
     <title>LPlayer Demo</title>
 </head>
 <body>
     <h1>Welcome to use LPlayer!</h1>
-    <h3>Tip: rightClick the controllers of the player can make them hidden!</h3>
-    <!-- set my player styles by using a div element -->
+    <h3>Tip: rightClick the controllers of the player can make them hidden!</br>右键播放器控制按钮可以隐藏它们！</h3>
+    <h3 onclick="turnOnDarkMode()">Click to test dark mode!</br>测试黑夜模式！</h3>
+    <!-- 
+        set my player styles by using a div element
+        用div的样式来规定播放器的大小
+     -->
     <div id="playerContainer">
-        <!-- easily use a lplayer tagnamed element to active the player -->
+        <!-- 
+            easily use a lplayer tagnamed element to active the player
+            用个<lplayer>标签就能加载播放器。内容在加载成功后会被清空。
+         -->
         <lplayer>
-            <!-- if the browser cannot load the js correctly, this appears -->
+            <!-- 
+                if the browser cannot load the js correctly, this appears
+                浏览器加载js失败的话这里就会保留并显示。
+             -->
             Something goes wrong ):
         </lplayer>
     </div>
-    <!-- set a container for the lyric -->
+    <!-- 
+        set a container for the lyric
+        再做个歌词的div
+     -->
     <div id="lyricContainer">
         <llyric>
             Something goes wrong ):
@@ -24,8 +40,35 @@
     <!-- 
         directly insert a source from the js file.
         By making source at the end to load the js file after your page.
+        直接把js文件链接加载到你的文档中。
+        链接放最后是为了让播放器最后加载。似乎可以提高其他地方的加载速度（我播放器那么小又不明显（；）
     -->
     <script src="https://cdn.jsdelivr.net/gh/Bylx666/lplayer@main/dist/lplayer.min.js"></script>
+    <script>
+        // custom files can be setted here by using the player variables
+        // there are only 4 public variables. if they are not set, js will use default configure.
+        // 自定义文件可以通过lpl的全局变量设置。
+        // lplayer只使用了 4 个全局变量，不设置的话就会走配置（一定要设置songList啊！除非你是拉拉人
+
+        lplCssFile = 'https://cdn.jsdelivr.net/gh/Bylx666/lplayer@main/lplayer.css'  // custom styles for the player. 自定义样式表~
+        lplHTMLFile = 'https://cdn.jsdelivr.net/gh/Bylx666/lplayer@main/index.html'  // custom layout html for the player. 插入lplayer标签用的html文件，尽量不要改除非源文件连接不上挂个源。
+        lplSongList = 'https://cdn.jsdelivr.net/gh/Bylx666/lplayer@main/demo/songs.json'  // CUSTOME the SONG LIST! 把歌单文件链接扔进去！不然就加载几首lovelive的歌了~
+        lplIconPath = 'https://cdn.jsdelivr.net/gh/Bylx666/lplayer@main/asset/icons/'  // custome icons in the player. 嫌弃我审美？看好路径和文件名，加载自己的一套图标。
+
+        // callback from the loaded player.
+        // 播放器加载成功后会调用这个函数。里面可以使用api之类的。
+        function lplOnload(){
+            // the command here can turn on dark mode of the player.
+            // 黑暗模式。如果你博客有黑主题的话建议使用这个api.
+
+            // LPlayerAPI.darkMode()
+        }
+
+        function turnOnDarkMode() { 
+            document.body.style.backgroundColor = 'wheat'
+            LPlayerAPI.darkMode()
+         }
+    </script>
     <style>
         #playerContainer{
             position: absolute;
