--- a/dev.html
+++ b/dev.html
@@ -17,7 +17,7 @@
     </div>
     <style>
         body{
-            /* background: black; */
+            background: wheat;
         }
         #playerContainer{
             position: absolute;
@@ -45,7 +45,7 @@
         lplSongList = 'http://localhost:8080/demo/songs.json'
         lplIconPath = 'http://localhost:8080/asset/icons/'
         function lplOnload(){
-            // LPlayerAPI.darkMode()
+            LPlayerAPI.darkMode()
         }
     </script>
     <script src="lplayer.js"></script>
