fix: undefined function

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -39,9 +39,9 @@
     </div>
     <!-- 
         directly insert a source from the js file.
-        By making source at the end to load the js file after your page.
+        By making source at the end to help the js find your <lplayer> tag
         直接把js文件链接加载到你的文档中。
-        链接放最后是为了让播放器最后加载。似乎可以提高其他地方的加载速度（我播放器那么小又不明显（；）
+        链接放最后是为了让播放器最后加载，否则找不到<lplayer>标签。
     -->
     <script src="https://cdn.jsdelivr.net/gh/Bylx666/lplayer@main/dist/lplayer.min.js"></script>
     <script>
